2007-10-24  Tim-Philipp Müller  <tim at centricular dot net>

	* src/inetaddr.c (gnet_inetaddr_get_name_async),
	  (gnet_inetaddr_get_name_async_cancel),
	  (inetaddr_get_name_async_gthread_dispatch),
	  (inetaddr_get_name_async_gthread):
	  Don't take lock in reverse lookup thread while it's doing the
	  blocking reverse lookup, otherwise a _cancel() from the main thread
	  will block until the blocking operation in the thread has finished,
	  which isn't what we want; fix a small leak when cancelling a lookup;
	  no need to take the lock before starting the lookup thread, just set
	  up the structure before starting the thread (no point optimising for
	  an unlikely failure case).

	* tests/check/gnet/gnetinetaddr.c: (gnetinetaddr_suite):
	  Add dumb unit test for reverse lookup cancellation.

2007-10-24  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Check if valgrind.h is available, so we can use it in
	  unit tests to check if we're running under valgrind
	  (and wait for threads to finish etc.).

2007-10-24  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/gnetcheck.c:
	  Don't leak function string array when using GNET_CHECKS.

2007-10-23  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* tests/check/Makefile.am:
	* tests/check/gnet/gnetconnhttp.c:
	* tests/check/gnet/gnettcpsocket.c:
	  Fix --disable-network-tests configure option.

2007-10-23  Tim-Philipp Müller  <tim at centricular dot net>

	* src/inetaddr.c:
	  Remove some now-unused structure members (of privat structure).

2007-10-19  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* src/gnet.c:
	* src/inetaddr.c:
	* configure.ac:
	  Remove fork()-and-pipe-based fallback for asynchronous DNS lookups,
	  which was used when GLib has been compiled without support for
	  threading, ie. G_THREADS_ENABLED was not defined.  This code is
	  unused in practice, pointless and I simply don't want to maintain it.